Make WebJars, requireJs and Play Jsroutes work's together
Rename JsRoutes and move jsRoutes Method to a new Class Javascript
Delete Scripts import to make only one using requireJs
Create angularServices Package
Create angularService PlayRoutes to wraps Play's routes to use Angular's $http from https://github.com/mariussoutier/
Creating require Config with angulars Jquery and start it with the services PlayRoutes
Change Home Jumbotron msg
Change Readme to thanks sources

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
-@main("T MORT PAGE !!! ") {
+@main("Index") {
     <div class="jumbotron">
-        <h1>T MORT !!!</h1>
+        <h1>requirejs : insert jquery Lib</h1>
     </div>
 }
