--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,6 +15,7 @@
 
         @stylesheets
 
+        <script data-main="@routes.Assets.versioned("javascripts/main.js")" src="@routes.WebJarAssets.at(WebJarAssets.locate("require.min.js"))"></script>
     </head>
     <body>
         @***
@@ -23,13 +24,5 @@
         <div class="container">
         @content
         </div>
-
-            <!-- Placed at the end of the document so the pages load faster -->
-        <script type="text/javascript" src='@routes.Application.javascriptRoutes'></script>
-        <script type='text/javascript' src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
-        <script type='text/javascript' src="@routes.WebJarAssets.at(WebJarAssets.locate("modernizr.min.js"))"></script>
-        <script type='text/javascript' src="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))"></script>
-        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/main.js")'></script>
-        @scripts
     </body>
 </html>
