--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@title - </title>
+        <title>@title - Main Title</title>
         <link rel="stylesheet" href="@routes.WebJarAssets.at(WebJarAssets.locate("normalize.css"))" />
         <link rel="stylesheet" media="screen, print" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))" />
         <link rel="stylesheet" href="@routes.WebJarAssets.at(WebJarAssets.locate("font-awesome.min.css"))" />
@@ -15,12 +15,9 @@
 
         @stylesheets
 
-        <script data-main="@routes.Assets.versioned("javascripts/main.js")" src="@routes.WebJarAssets.at(WebJarAssets.locate("require.min.js"))"></script>
+        <script data-main="@routes.Assets.versioned("javascripts/mainApp.js")" src="@routes.WebJarAssets.at(WebJarAssets.locate("require.min.js"))"></script>
     </head>
     <body>
-        @***
-        @navbar(menu)
-        ***@
         <div class="container">
         @content
         </div>
